--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "my-app",
+  "name": "splitting_div",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "bootstrap": "5.1.3",
+    "classnames": "^2.3.1",
+    "cra-template": "1.1.2",
+    "loadash": "^1.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "react-modal": "^3.14.4",
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
